add demais campos
